--- a/querybuilder/src/main/resources/application.properties
+++ b/querybuilder/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.datasource1.DriverClassName=com.mysql.jdbc.Driver
+spring.datasource1.url=jdbc:mysql://localhost:3306/query_builder
+spring.datasource1.username=root
+spring.datasource1.password=password
+
 spring.datasource.DriverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mallproject
 spring.datasource.username=root
