--- a/querybuilder/pom.xml
+++ b/querybuilder/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.query</groupId>
 	<artifactId>querybuilder</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 	<name>querybuilder</name>
 	<description>QueryBuilder</description>
 	<properties>
@@ -31,7 +31,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+        <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20210307</version>
+</dependency>
+          
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -53,14 +58,15 @@
     <artifactId>gson</artifactId>
     <version>2.9.0</version>
 </dependency>
-	
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
