--- a/querybuilder/pom.xml
+++ b/querybuilder/pom.xml
@@ -8,9 +8,9 @@
 		<version>2.7.10</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.query</groupId>
+	<groupId>com.query.builder</groupId>
 	<artifactId>querybuilder</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.2.1-SNAPSHOT</version>
 	<name>querybuilder</name>
 	<description>QueryBuilder</description>
 	<properties>
@@ -31,18 +31,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.12.0</version>
+    </dependency>
+
         <dependency>
     <groupId>org.json</groupId>
     <artifactId>json</artifactId>
     <version>20210307</version>
 </dependency>
-          
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
+          <dependency> 
+    <groupId>org.springframework.boot</groupId> 
+    <artifactId>spring-boot-starter-validation</artifactId> 
+</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
