--- a/querybuilder/src/main/resources/application.properties
+++ b/querybuilder/src/main/resources/application.properties
@@ -1,16 +1,10 @@
-spring.datasource1.DriverClassName=com.mysql.jdbc.Driver
-spring.datasource1.url=jdbc:mysql://localhost:3306/query_builder
-spring.datasource1.username=root
-spring.datasource1.password=password
-	
-spring.datasource.DriverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mallproject
+spring.datasource.url=jdbc:mysql://localhost:3306/?useSSL=false
+
 spring.datasource.username=root
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
 
 
 
