--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
 <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
@@ -11,7 +10,7 @@
 </parent>
 <groupId>com.tm.querybuilder</groupId>
      <artifactId>querybuilder</artifactId>
-	 <version>1.3.2-SNAPSHOT</version>
+	 <version>1.6.0-SNAPSHOT</version>
      <name>querybuilder</name>
  <description>QueryBuilder</description>
 <properties>
@@ -19,9 +18,10 @@
 </properties>
 <dependencies>
 	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-jdbc</artifactId>
-	</dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+</dependency>
+
 	<!-- https://mvnrepository.com/artifact/org.gcube.informationsystem/is-collector-stubs -->
     <dependency>
          <groupId>com.google.code.gson</groupId>
@@ -40,7 +40,7 @@
 		<artifactId>mysql-connector-j</artifactId>
 		<scope>runtime</scope>
 	</dependency>
-	</dependencies>
+</dependencies>
     <build>
 		<plugins>
 		 <plugin>
